
Enhancements:
 - Login url support now all placeholder defined in YumHelper::route (tomasz.suchanek)
 - Unified naming convention for all links description (only first letter in sentence is uppercased) (tomasz.suchanek)
 - Added title property to YumController instead of displaying heading directly in views. Heading is now displayed in layout according to use needs (tomasz.suchanek)
 
Bug Fixes:
- Changed UserModule::$returnUrl UserModule::$returnLogoutUrl calls to Yii::app()->controller->module->returnUrl/returnLogoutUrl (steve)
- Fixed the fallback table name in the ProfileField Model (steve)
- Fixed the incorrect URL generations in user/modules/role/views/role/admin.php view (steve)
- Fixed bug #35, #40: Usign table prefixes doesn't break relation definitions (tomasz.suchanek)
- Fixed bug 'Trying to get property of non-object' when typing not existing username/email in login form (tomasz.suchanek) 

New in 0.5:
- Added Polish messages translaction (Beta, please submit mistakes) (darek.krk)
- It is possible to pass valid callback function for passwords hashing in module configuraction (as default md5 will be used) (darek.krk) 
- Password should not be pre-populated in user update form (darek.krk)
- Fixed profile table name get method when creating or deleting profile fields (darek.krk)
- Updated french translation Messages (christophe.hurpeau)
- Added optional salt to Password encryption (darek.krk)
- Refactored User registration and Password recovery Process (thyseus)
- fixed the way Models retrieve their tablename so it works even when not in module context (steve, thyseus)
- started to begin submodularized infrastructure. see docs/submodules.txt (thyseus)
- Profile submodule now allows to have multiple profiles for an user, with the last one being the default.
- Role submodule now has the possibility to assing 'slave' users to users. This way you can define an user hierarchy that defines which users can administrate which users (thyseus)